# webpx

./: .gitignore  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  LICENSE-APACHE  README.md  justfile
.github/workflows/: ci.yml
benches/: codec.rs  profile.rs
docs/: libwebp-api.md  libwebp-container-api.md  webp-memory-use.md
examples/: alloc_profile.rs  mem_formula.rs  pixel_api_demo.rs  quick_encode.rs  quick_encode_lossless.rs  real_image_test.rs  wasm_demo.rs
src/: animation.rs  config.rs  decode.rs  encode.rs  error.rs  heuristics.rs  lib.rs  mux.rs  streaming.rs  types.rs
src/compat/: mod.rs  webp.rs  webp_animation.rs
tests/: integration.rs
